--- a/index.css
+++ b/index.css
@@ -2,23 +2,29 @@ html {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
-    background-image: url('pexels-jess-bailey-designs-743986.jpg');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
+  background-image: url("pexels-jess-bailey-designs-743986.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+.center {
+  margin: auto;
+  width: 50%;
+  border: 3px solid #009dff;
+  padding: 10px;
 }
 form {
   margin: 0 30px;
+  align-items: center;
 }
 .btn-block {
   margin-top: 10px;
   text-align: center;
 }
 input[type="text"] {
-  align-items: center;
-  margin: auto;
+  margin: center;
   padding: 10px;
-  width: auto;
+  width: 97%;
   border-radius: 0 5px 5px 0;
   border: solid 1px #cbc9c9;
   box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.09);
@@ -36,4 +42,12 @@ button {
 }
 button:hover {
   background: #009ee2;
+}
+h1,
+p {
+  text-align: center;
+}
+pre {
+  margin: auto;
+  padding: 5px;
 }
