--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ html {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
-  background-image: url("pexels-jess-bailey-designs-743986.jpg");
+  background-image: url("cool-background.png");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
